# FastAPI

./: README.md
bank_account/: pyproject.toml
bank_account/app/: main.py  models.py  schema.py
bank_account/app/alembic/: env.py
bank_account/app/alembic/versions/: 2f12d31617bd_initial_alembic.py  45bbc2154128_initial_alembic.py  63ece0b993dc_initialize_alembic.py  bc2f27e1752f_initial_alembic.py
bank_account/app/api/: routers.py
bank_account/app/core/: config.py
bank_account/app/service/: account_service.py
crud_api/: main.py  model.py
send_mail/: pyproject.toml
send_mail/app/: config.py  main.py  schemas.py
send_mail/app/email/: router.py  service.py
social_media_app/: .gitignore  pyproject.toml
social_media_app/app/: api.py  main.py
social_media_app/app/activity/: models.py  router.py  schemas.py  service.py
social_media_app/app/alembic/: env.py
social_media_app/app/alembic/versions/: 10183e50d469_initial_alembic.py  108240ece699_initial_alembic.py  308a60332dba_initialize_alembic.py  7db1aa0dcf4b_initial_alembic.py  c89f61782004_initial_alembic.py  c9eea7b66364_initial_alembic.py  d87946b1f9de_initial_alembic.py  d8aa4783b8a8_initial_alembic.py  df6674dba57b_initial_alembic.py  e36a0a2b902c_initial_alembic.py  f4d99962c780_initial_alembic.py
social_media_app/app/auth/: models.py  router.py  schemas.py  service.py
social_media_app/app/core/: config.py
social_media_app/app/post/: models.py  router.py  schemas.py  service.py
social_media_app/app/profile/: router.py  schemas.py  service.py
study-logs/: 2024-03-11-fastapi.md  (+18 more)
(+55 files in other folders)
